--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -446,7 +446,7 @@ h2{
 
 
 
-@media (min-width: 501px) and (max-width: 900px){
+@media (min-width: 551px) and (max-width: 900px){
   .text-container {
     width: 70%;
   }
@@ -454,12 +454,23 @@ h2{
     width: 70%;
   }
   }
-  @media (max-width: 500px){
+  @media (max-width: 550px){
+
+    .filtering{
+      background-image: url(../img/portfolio_background_600.png);
+    }
+    .filter-categories ul li {
+      display: block;
+    }
     .text-container {
       width: 85%;
     }
     .text-box{
       width: 85%;
+    }
+    .container-fluid {
+      position: relative;
+      display: block;
     }
     }
 
@@ -528,6 +539,9 @@ h2{
 
 } */
 
+
+
+
 .gallery {
   height: auto;
   background-color: #908FBB;
@@ -559,8 +573,6 @@ h2{
   left: 0%; */
   width: 100%;
 }
-
-
 
 .opis {
   height: auto;
@@ -626,25 +638,17 @@ h2{
 } */
 
 .container-fluid {
-margin: 0px;
-padding: 0px;
-background-color: #474860;
+  margin: 0px;
+  padding: 0px;
+  background-color: #474860;
+    }
 
-display: flex;
-flex-wrap: wrap;
-align-items: flex-start;
-align-content: flex-start;
-}
+
 
 .portfolio-item img {
-  position: relative;
   width: 100%;
-  height: 100%;
-  /* overflow: hidden;
-  object-fit: cover; */
+  overflow: hidden;
 }
-
-
 
 .portfolio-item .thumb {
   position: relative;
