--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -632,13 +632,8 @@ h2{
   position: relative;
   top: 10rem;
   left: 0;
-
-  /* background-color: aliceblue; */
-  width: 90%;
+  width: 80%;
   height: auto;
-  /* height: 20vw; */
-  /* border: 1px solid green; */
-  /* padding: 0vh 0 20vh 0; */
   margin: 1vw;
 }
 
@@ -716,18 +711,28 @@ h2{
   margin: 0px;
   padding: 0px;
   background-color: #474860;
-    }
+  /* min-height: 20vh;  */
+ }
 
-
+  .container-tab {
+    /* position: relative; */
+    height: 55vh;
+  }
+  .portfolio_item {
+    position: relative;
+    overflow: hidden;
+    display: block;
+}
 
 .portfolio-item img {
   width: 100%;
-  overflow: hidden;
+
+  /* overflow: hidden; */
 }
 
-.portfolio-item .thumb {
+/* .portfolio-item .thumb {
   position: relative;
-}
+} */
 
 
 .portfolio-overlay {
@@ -1207,7 +1212,7 @@ footer .col-md-12 i {
 
 
 .services {
-  background-color: #232323;
+  background-color: #474860;
   padding: 65px 0px;
 }
 
@@ -1219,7 +1224,7 @@ footer .col-md-12 i {
 }
 
 .services .service-item:hover {
-  background-color: #313131;
+  background-color: #595a75;
 }
 
 .services .service-item .icon {
@@ -1262,10 +1267,10 @@ footer .col-md-12 i {
 }
 
 .more-about-us .content {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(71, 72, 96, 0.8);
   text-align: left;
   padding: 150px 60px;
-  color: #fff;
+  color: rgb(255, 255, 255);
 }
 
 .more-about-us .content h2 {
@@ -1274,6 +1279,7 @@ footer .col-md-12 i {
   font-weight: 300;
   letter-spacing: 0.5px;
   margin-bottom: 5px;
+  color: #f4dd5b;
 }
 
 .more-about-us .content span {
@@ -1397,7 +1403,7 @@ footer .col-md-12 i {
 
 .blog-entries {
   padding: 80px 0px;
-  background-color: #232323;
+  background-color: #908FBB;
 }
 
 
@@ -1443,7 +1449,7 @@ footer .col-md-12 i {
 }
 
 .blog-post .text-content p {
-  color: #bbb;
+  color: rgb(255, 255, 255);
   font-size: 16px;
   font-weight: 300;
   line-height: 28px;
@@ -1600,9 +1606,9 @@ footer .col-md-12 i {
 .single-blog-post .tags-share .share {
   text-align: right;
 }
-
+/* 
 .blog-entries .search input {
-  background-color: rgba(250, 250, 250, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   height: 50px;
   line-height: 50px;
@@ -1613,7 +1619,8 @@ footer .col-md-12 i {
   border-radius: 0px;
   outline: none;
   border: none;
-}
+} */
+
 
 .sidebar-heding h2 {
   font-size: 20px;
